# polynodes-osc-mcp

./: .gitignore  .mcp.json  LICENSE  README.ja.md  README.md  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
skills/polynodes-guide/: SKILL.md
skills/polynodes-guide/reference/: osc-addresses.md
