[project]
name = "polynodes-osc-mcp"
version = "0.1.0"
description = "MCP Server for controlling PolyNodes via OSC"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "python-osc",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
